--- a/site/index.html
+++ b/site/index.html
@@ -130,6 +130,15 @@
                     <p>코드 보기 <a href="hoverEffectType.html">View</a></p>
                 </div>
                 <!-- //Intro5 -->
+                <!-- Intro6 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">test</h2>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FBPxuvXcOOiQ5gimX8yHllp%2F%25EC%259B%25B9%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D593%253A54" allowfullscreen></iframe>
+                    <p>코드 보기 - test01 <a href="test01.html">View</a></p>
+                    <p>코드 보기 - test02 <a href="test02.html">View</a></p>
+                    <p>코드 보기 - test03 <a href="test03.html">View</a></p>
+                </div>
+                <!-- //Intro6 -->
 
 
             </div>
