--- a/refer-effect/parallaxEffext/jqueryPE01.html
+++ b/refer-effect/parallaxEffext/jqueryPE01.html
@@ -201,7 +201,7 @@
                     <ul>
                         <li class="active"><a href="#">Html</a></li>
                         <li><a href="#">CSS</a></li>
-                        <li><a href="#">Javascript</a></li>
+                        <li><a href="#">jQuery</a></li>
                     </ul>
                 </div>
                 <div class="view-cont">
