--- a/refer-effect/parallaxEffext/jqueryPE02.html
+++ b/refer-effect/parallaxEffext/jqueryPE02.html
@@ -229,7 +229,7 @@
                     <ul>
                         <li class="active"><a href="#">Html</a></li>
                         <li><a href="#">CSS</a></li>
-                        <li><a href="#">Javascript</a></li>
+                        <li><a href="#">jquery</a></li>
                     </ul>
                 </div>
                 <div class="view-cont">
