--- a/refer-javascript/test.html
+++ b/refer-javascript/test.html
@@ -118,33 +118,69 @@
     }
 
 
+    // {
+    //     function func(){
+    //         let a =[], cnt = 0;
+
+    //         for(i=1; i<=5; i++){
+    //             if(a[i] % 2 !=0){
+    //                 cnt = cnt+1;
+    //             }
+    //         }
+    //         document.write(cnt+"<br>");
+    //         console.log(i)
+    //     }
+    //     func();
+    // }
+
+    // {
+    //     function func1(){
+    //         let i=10, hap=0;
+    //         while(i>1){
+    //             i--;
+    //             if(i%3 == 1){
+    //                 hap+=[i]; //10,7,4
+    //             }
+    //         }
+    //         document.write(hap);
+    //     }
+    //     func1();
+    // }
+
     {
         function func(){
-            let a =[], cnt = 0;
-
-            for(i=1; i<=5; i++){
-                if(a[i] % 2 !=0){
-                    cnt = cnt+1;
-                }
-            }
-            document.write(cnt+"<br>");
-            console.log(i)
+            let i =5, j=4, k=1, l, m;
+            l=i>5 || j !=0;
+            m=j <= 4 && k<1;
+            document.write(l, "<br>");
+            document.write(m, "<br><br>");
         }
         func();
     }
 
     {
         function func1(){
-            let i=10, hap=0;
-            while(i>1){
-                i--;
-                if(i%3 == 1){
-                    hap+=[i]; //10,7,4
-                }
-            }
-            document.write(hap);
+            let i=10, j=10, k=30;
+            i /= j;
+            j-=i;
+            k%=j;
+            document.write(i, "<br>");
+            document.write(j, "<br>");
+            document.write(k, "<br><br>");
         }
         func1();
+    }
+
+    {
+        function func2(){
+            for(i=1; i<=7; i++){
+                for(j=1; j<=i; j++){
+                    document.write(j);
+                }
+                document.write("<br>");
+            }
+        }
+        func2();
     }
 
     </script>
