--- a/refer-effect/parallaxEffext/javascriptPE03.html
+++ b/refer-effect/parallaxEffext/javascriptPE03.html
@@ -15,13 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
     <style>
-        /* .paraNav {
+        .paraNav {
             top: -200px;
             transition: top 0.4s ease;
         }
         .paraNav.show {
             top: 20px;
-        } */
+        }
         .paraNav li a {
             width: auto;
             padding: 5px 20px;
@@ -359,9 +359,36 @@
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
+        document.querySelectorAll(".paraNav ul li a").forEach(li => {
+            li.addEventListener("click", e => {
+                e.preventDefault();
+                document.querySelector(li.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            });
+        });
+
         window.addEventListener("scroll", () => {
             let scrollTop = document.documentElement.scrollTop || window.scrollY || window.pageYOffset;
 
+            // 메뉴
+            if(scrollTop > 0){
+                document.querySelector(".paraNav").classList.add("show");
+            } else {
+                document.querySelector(".paraNav").classList.remove("show");
+            }
+
+            // 버튼
+            document.querySelectorAll(".content-item").forEach((item, index) => {
+                if(scrollTop >= item.offsetTop){
+                    document.querySelectorAll(".paraNav ul li").forEach(li => {
+                        li.classList.remove("active");
+                    })
+                    document.querySelector(".paraNav ul li:nth-child("+(index+1)+")").classList.add("active");
+                }
+            })
+
+            // 출력용
             document.querySelector(".paraScroll span").innerText = parseInt(scrollTop);
         })
         
