--- a/refer-effect/parallaxEffext/javascriptPE03.html
+++ b/refer-effect/parallaxEffext/javascriptPE03.html
@@ -378,9 +378,9 @@
                 document.querySelector(".paraNav").classList.remove("show");
             }
 
-            // 버튼
+            // 버튼용
             document.querySelectorAll(".content-item").forEach((item, index) => {
-                if(scrollTop >= item.offsetTop){
+                if(scrollTop >= item.offsetTop -2){
                     document.querySelectorAll(".paraNav ul li").forEach(li => {
                         li.classList.remove("active");
                     })
