--- a/joodo/main.html
+++ b/joodo/main.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="bannerBox">
                     <div class="textBox">
-                        <h3>맛있는 술1</h3>
+                        <h3>맛있는 술</h3>
                         <p>맛있는 술이 무엇인지 궁금했던 당신!<br>궁금증을 해결해드리겠습니다!</p>
                     </div>
                     <span class="banner-btn">
@@ -71,8 +71,8 @@
                 </div>
                 <div class="bannerBox">
                     <div class="textBox">
-                        <h3>맛있는 술2</h3>
-                        <p>맛있는 술이 무엇인지 궁금했던 당신!<br>궁금증을 해결해드리겠습니다!</p>
+                        <h3>칵테일</h3>
+                        <p>칵테일이 궁금한 당신!<br>궁금증을 해결해드리겠습니다!</p>
                     </div>
                     <span class="banner-btn">
                         <a href="#">해결하러가기</a>
@@ -86,8 +86,8 @@
                 </div>
                 <div class="bannerBox">
                     <div class="textBox">
-                        <h3>맛있는 술3</h3>
-                        <p>맛있는 술이 무엇인지 궁금했던 당신!<br>궁금증을 해결해드리겠습니다!</p>
+                        <h3>안주</h3>
+                        <p>혼술할 때 색다른 안주가 궁금한 당신!<br>궁금증을 해결해드리겠습니다!</p>
                     </div>
                     <span class="banner-btn">
                         <a href="#">해결하러가기</a>
@@ -101,8 +101,8 @@
                 </div>
                 <div class="bannerBox">
                     <div class="textBox">
-                        <h3>맛있는 술4</h3>
-                        <p>맛있는 술이 무엇인지 궁금했던 당신!<br>궁금증을 해결해드리겠습니다!</p>
+                        <h3>편의점 맥주</h3>
+                        <p>맥주사러 갔다가 당황했던 당신!<br>궁금증을 해결해드리겠습니다!</p>
                     </div>
                     <span class="banner-btn">
                         <a href="#">해결하러가기</a>
@@ -126,7 +126,7 @@
                                 <p>보리를 가공한 맥아(malt)를 주재료로[2] 발효시키고 여기에 향신료인 홉(hop)을 첨가하여 맛을 낸 술. 양조주에 속한다. 오늘날 극빈국이 아닌 이상 어느 나라든 자국 맥주 브랜드 하나쯤은 가지고 있으므로, 전세계적으로 가장 대중화된 주류라고 할 수 있다.
                                     맥주를 뜻하는 영어 단어 비어(beer)의 어원은 두 가지 설이 있다. ‘마시다’는 뜻을 가진 라틴어 비베레(bibere)와 ‘곡물’을 뜻하는 게르만어 베오레(bior)에서 나왔다는 설이다. 2013년 현재 한국 주세법에서 맥주는 “엿기름(밀엿기름을 포함한다.), 홉(홉 성분을 추출한 것을 포함한다.) 및 쌀 ·보리·옥수수·수수·감자·녹말·당분·캐러멜 중 하나 또는 그 이상의 것과 물을 원료로 하여 발효시켜 제성하거나 여과하여 제성한 것”으로 정의하고 있다.
                                 </p>
-                                <span>맥주의 종류<br>ㅁㄴㅁㄴㅁㅇㄹ, ㅁㄴㅇㄻㄴㅇㄹ,ㅁㄴㅇㄹㄴㅇㅁㄹㄹ,ㅁㄴㅇㄻㄴㅇㄹ</span>
+                                <span>맥주의 종류<br>에일맥주, 라거맥주, 크래프트 맥주, 라들러 등등</span>
                                 <div class="section-btn">
                                     <a href="#">더 알아보기</a>
                                 </div>
@@ -137,11 +137,10 @@
                                 <img src="assets/img/history02@2x.jpg" alt="맥주">
                             </div>
                             <div class="sectionText">
-                                <h3> : Beer / 麥酒</h3>
-                                <p>보리를 가공한 맥아(malt)를 주재료로[2] 발효시키고 여기에 향신료인 홉(hop)을 첨가하여 맛을 낸 술. 양조주에 속한다. 오늘날 극빈국이 아닌 이상 어느 나라든 자국 맥주 브랜드 하나쯤은 가지고 있으므로, 전세계적으로 가장 대중화된 주류라고 할 수 있다.
-                                    맥주를 뜻하는 영어 단어 비어(beer)의 어원은 두 가지 설이 있다. ‘마시다’는 뜻을 가진 라틴어 비베레(bibere)와 ‘곡물’을 뜻하는 게르만어 베오레(bior)에서 나왔다는 설이다. 2013년 현재 한국 주세법에서 맥주는 “엿기름(밀엿기름을 포함한다.), 홉(홉 성분을 추출한 것을 포함한다.) 및 쌀 ·보리·옥수수·수수·감자·녹말·당분·캐러멜 중 하나 또는 그 이상의 것과 물을 원료로 하여 발효시켜 제성하거나 여과하여 제성한 것”으로 정의하고 있다.
+                                <h3>칵테일 : Cocktail</h3>
+                                <p>여러 종류의 술을 바탕으로 고미제(苦味劑), 설탕, 향료 등을 혼합하여 만든 혼합주(mixed drink)의 한 종류. 쉽게 말해 섞어 마시는 술이다. 그 기원은 16세기 이전으로 가는데, 칵테일이라 불리게 된 어원에 대한 설도 꽤 많다.
                                 </p>
-                                <span>맥주의 종류<br>ㅁㄴㅁㄴㅁㅇㄹ, ㅁㄴㅇㄻㄴㅇㄹ,ㅁㄴㅇㄹㄴㅇㅁㄹㄹ,ㅁㄴㅇㄻㄴㅇㄹ</span>
+                                <span>칵테일의 종류<br>모히토, 블루 하와이, 코스모폴리탄, 바카디 등등</span>
                                 <div class="section-btn">
                                     <a href="#">더 알아보기</a>
                                 </div>
@@ -152,11 +151,10 @@
                                 <img src="assets/img/history03@2x.jpg" alt="맥주">
                             </div>
                             <div class="sectionText">
-                                <h3> : Beer / 麥酒</h3>
-                                <p>보리를 가공한 맥아(malt)를 주재료로[2] 발효시키고 여기에 향신료인 홉(hop)을 첨가하여 맛을 낸 술. 양조주에 속한다. 오늘날 극빈국이 아닌 이상 어느 나라든 자국 맥주 브랜드 하나쯤은 가지고 있으므로, 전세계적으로 가장 대중화된 주류라고 할 수 있다.
-                                    맥주를 뜻하는 영어 단어 비어(beer)의 어원은 두 가지 설이 있다. ‘마시다’는 뜻을 가진 라틴어 비베레(bibere)와 ‘곡물’을 뜻하는 게르만어 베오레(bior)에서 나왔다는 설이다. 2013년 현재 한국 주세법에서 맥주는 “엿기름(밀엿기름을 포함한다.), 홉(홉 성분을 추출한 것을 포함한다.) 및 쌀 ·보리·옥수수·수수·감자·녹말·당분·캐러멜 중 하나 또는 그 이상의 것과 물을 원료로 하여 발효시켜 제성하거나 여과하여 제성한 것”으로 정의하고 있다.
+                                <h3>흑맥주 : Dark Beer / 黑麥酒</h3>
+                                <p>검은 빛깔을 가진 맥주들의 통칭. 흔히 맥주에 크게 관심이 없거나 잘 모르는 사람들에게 색깔만으로 구분하기 쉽게 임의로 부르는 명칭이다. 실제로는 검은 빛깔의 맥주라도 종류가 천차만별로 다르며 맛과 향 또한 서로 다르기 때문에 맥주 매니아들의 경우 흑맥주라는 명칭을 잘 사용하지 않는다.
                                 </p>
-                                <span>맥주의 종류<br>ㅁㄴㅁㄴㅁㅇㄹ, ㅁㄴㅇㄻㄴㅇㄹ,ㅁㄴㅇㄹㄴㅇㅁㄹㄹ,ㅁㄴㅇㄻㄴㅇㄹ</span>
+                                <span>흑맥주의 종류<br>기네스, 아사히 드라이 블랙, 에딩거 둔켈 등등</span>
                                 <div class="section-btn">
                                     <a href="#">더 알아보기</a>
                                 </div>
@@ -167,11 +165,10 @@
                                 <img src="assets/img/history04@2x.jpg" alt="맥주">
                             </div>
                             <div class="sectionText">
-                                <h3> : Beer / 麥酒</h3>
-                                <p>보리를 가공한 맥아(malt)를 주재료로[2] 발효시키고 여기에 향신료인 홉(hop)을 첨가하여 맛을 낸 술. 양조주에 속한다. 오늘날 극빈국이 아닌 이상 어느 나라든 자국 맥주 브랜드 하나쯤은 가지고 있으므로, 전세계적으로 가장 대중화된 주류라고 할 수 있다.
-                                    맥주를 뜻하는 영어 단어 비어(beer)의 어원은 두 가지 설이 있다. ‘마시다’는 뜻을 가진 라틴어 비베레(bibere)와 ‘곡물’을 뜻하는 게르만어 베오레(bior)에서 나왔다는 설이다. 2013년 현재 한국 주세법에서 맥주는 “엿기름(밀엿기름을 포함한다.), 홉(홉 성분을 추출한 것을 포함한다.) 및 쌀 ·보리·옥수수·수수·감자·녹말·당분·캐러멜 중 하나 또는 그 이상의 것과 물을 원료로 하여 발효시켜 제성하거나 여과하여 제성한 것”으로 정의하고 있다.
+                                <h3>소주 : Soju / 燒酒</h3>
+                                <p>한국의 술이자 증류주의 한 종류로, 크게 두 가지 방식이 존재한다. 곡물을 발효해 만든 청주를 밑술로 삼아,[1] 소줏고리라고 부르는 단식증류기로 증류해 만들어진 소주인 증류식 소주. 현대의 증류탑을 이용해 대량의 95도가량의 주정을 생산하여 이에 물과 기타 첨가물을 희석해 만드는 희석식 소주 두 가지로 나뉜다. 
                                 </p>
-                                <span>맥주의 종류<br>ㅁㄴㅁㄴㅁㅇㄹ, ㅁㄴㅇㄻㄴㅇㄹ,ㅁㄴㅇㄹㄴㅇㅁㄹㄹ,ㅁㄴㅇㄻㄴㅇㄹ</span>
+                                <span>소주의 종류<br>증류식 소주, 희석식 소주, 담금소주 등등</span>
                                 <div class="section-btn">
                                     <a href="#">더 알아보기</a>
                                 </div>
@@ -190,21 +187,26 @@
                             <h3>DRINK MENU</h3>
                             <p>다양한 종류를 경험해보세요</p>
                             <div class="drinks">
-                                <div class="drink beer">
-                                    <img src="assets/img/history01.jpg" alt="이미지입니다.">
-                                    <span class="desc">맥주</span>
+                                <div class="drinks-wrap">
+                                    <div class="drink beer">
+                                        <img src="assets/img/history01.jpg" alt="이미지입니다.">
+                                        <span class="desc">맥주</span>
+                                    </div>
+                                    <div class="drink wine">
+                                        <img src="assets/img/history02.jpg" alt="이미지입니다.">
+                                        <span class="desc">맥주</span>
+                                    </div>
+                                    <div class="drink vodka">
+                                        <img src="assets/img/history03.jpg" alt="이미지입니다.">
+                                        <span class="desc">맥주</span>
+                                    </div>
+                                    <div class="drink cocktail">
+                                        <img src="assets/img/history04.jpg" alt="이미지입니다.">
+                                        <span class="desc">맥주</span>
+                                    </div>
                                 </div>
-                                <div class="drink wine">
-                                    <img src="assets/img/history02.jpg" alt="이미지입니다.">
-                                    <span class="desc">맥주</span>
-                                </div>
-                                <div class="drink vodka">
-                                    <img src="assets/img/history03.jpg" alt="이미지입니다.">
-                                    <span class="desc">맥주</span>
-                                </div>
-                                <div class="drink cocktail">
-                                    <img src="assets/img/history04.jpg" alt="이미지입니다.">
-                                    <span class="desc">맥주</span>
+                                <div class="drinks-btn">
+                                    <a href="#">View Drinks</a>
                                 </div>
                             </div>
                         </section>
@@ -253,7 +255,7 @@
 
             currentIndex1 = nextIndex1;
             currentIndex2 = nextIndex2;
-        }, 2000);
+        }, 5000);
     </script>
 </body>
 </html>
