--- a/site-react/main2.html
+++ b/site-react/main2.html
@@ -77,18 +77,51 @@
 
 
     <!-- main -->
+
+    <div class="cursor"></div>
+
     <main id="main">
-        <section id="mainCont">
-            <h2 class="sr-only">메인 컨텐츠입니다.</h2>
-            <div class="main__cont">
-                <!-- <div>I am</div>
-                <div>react.js</div>
-                <div>FrontEnd</div>
-                <div>developer</div> -->
-                <div>WE<br>PROVIDE</div>
-                <div>VISUAL<br>CODING</div>
-                <div>SOLUTIONS</div>
-                <div>FOR YOU<br>WEBS</div>
+        <section id="mainCont2">
+            <div class="textWrap">
+                <div class="line">
+                    <div class="left">
+                        <div class="spanWrap">
+                            <span class="spanSlow">React.Js</span>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="spanWrap">
+                            <span class="spanSlow">React.Js</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="left">
+                        <div class="spanWrap">
+                            <span class="spanFast">FrontEnd</span>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="spanWrap">
+                            <span class="spanFast">FrontEnd</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="left">
+                        <div class="spanWrap">
+                            <span class="spanSlow">Developer</span>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="spanWrap">
+                            <span class="spanSlow">Developer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="imgWrap">
+                <img src="assets/img/main2_40.jpg" alt="배경이미지">
             </div>
         </section>
     </main>
@@ -121,5 +154,27 @@
     <!-- //footer -->
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script>
+        function Move(e){
+
+            // 마우스 값
+            let pageX = e.pageX;
+            let pageY = e.pageY;
+
+            // 커서
+            gsap.to(".cursor", {duration: .3, left: pageX - 10, top: pageY - 10});
+
+
+            // 기준점 변경
+            let positionSlow = (e.pageX - (window.innerWidth/2)) * 0.1;
+            let positionFast = (e.pageX - (window.innerWidth/2)) * 0.2;
+
+            gsap.to(".spanSlow", {duration: .4, x: positionSlow});
+            gsap.to(".spanFast", {duration: .4, x: -positionFast});
+        };
+
+        window.addEventListener("mousemove", Move);
+    </script>
 </body>
 </html>
