--- a/refer-effect/parallaxEffext/index.html
+++ b/refer-effect/parallaxEffext/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
 
     <style>
+        #nav li a {
+            width: 80px;
+        }
         @media(max-width: 800px) {
             #nav ul li a {
                 font-size: 12px;
@@ -38,6 +41,7 @@
             <li><a href="javascriptPE06.html">6</a></li>
             <li><a href="javascriptPE07.html">7</a></li>
             <li><a href="javascriptPE08.html">8</a></li>
+            <li><a href="parallaxV.html">V</a></li>
         </ul>
         <ul>
             <li><a href="jqueryPE01.html">1</a></li>
@@ -48,6 +52,7 @@
             <li><a href="jqueryPE06.html">6</a></li>
             <li><a href="jqueryPE07.html">7</a></li>
             <li><a href="jqueryPE08.html">8</a></li>
+            <li><a href="parallaxVH.html">VH</a></li>
         </ul>
     </nav>
 
